--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="areaBasedList.cs" />
     <Compile Include="JsonCodes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -101,6 +102,7 @@
     <None Include="areaCode.json" />
     <None Include="categoryCode.json" />
     <None Include="json1.json" />
+    <None Include="areBasedList.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
