여행정보 세부사항 Parsing 완료... 2018/12/16 내일은 이미지 추가사항 불러오자 ...

--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaBased.cs" />
+    <Compile Include="DetailCommon.cs" />
     <Compile Include="JsonCodes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -148,4 +149,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties DetailCommon_1json__JSONSchema="http://json.schemastore.org/bundleconfig" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
