Remote Git으로 code 이동.

--- a/App.config
+++ b/App.config
@@ -6,6 +6,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
+    <add name="conStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\gd12\source\repos\railro.cs\railro.cs\Location.mdf;Integrated Security=True" />
     <add name="connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
     <add name="RailoNailo.Properties.Settings.connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
   </connectionStrings>
