--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -113,6 +113,7 @@
     <None Include="categoryCode.json" />
     <None Include="areBasedList.json" />
     <None Include="DetailCommon.json" />
+    <None Include="json1.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
