--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="conStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Goodee\Railo\Railo_DB.mdf;Integrated Security=True" />
+    <add name="conStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
     <add name="connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
     <add name="RailoNailo.Properties.Settings.connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
   </connectionStrings>
