--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -180,6 +180,12 @@
     <None Include="areBasedList.json" />
     <None Include="DetailCommon.json" />
     <None Include="detailImage.json" />
+    <None Include="Font\Hanna.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Font\HannaPro.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="json1.json" />
     <None Include="json2.json" />
     <None Include="packages.config" />
@@ -192,10 +198,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="한나체!.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="한나체Pro.ttf" />
     <None Include="searchKeword.json" />
   </ItemGroup>
   <ItemGroup>
