예준 -->>> 세부적인 사항 소량 변경

--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -295,6 +295,9 @@
     <Content Include="Images\plus.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\RepublicOfKorea.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\right.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
