원석 디버깅 및 파일 저장 기능 추가

--- a/RailoNailo.csproj
+++ b/RailoNailo.csproj
@@ -298,6 +298,9 @@
     <Content Include="Images\right.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\Save.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\ticket.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
