원석>사진 이름 바꾸기 전 commit

--- a/App.config
+++ b/App.config
@@ -6,7 +6,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="conStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=True;" />
+    <!--Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\gd12\source\repos\RailoNailo\Railo_DB.mdf;Integrated Security=True-->
+    <add name="conStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;" />
     <add name="connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
     <add name="RailoNailo.Properties.Settings.connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
   </connectionStrings>
