--- a/App.config
+++ b/App.config
@@ -10,4 +10,7 @@
     <add name="connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
     <add name="RailoNailo.Properties.Settings.connectionRailo" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\C#\Railro\RailoNailo\Railo_DB.mdf;Integrated Security=True" />
   </connectionStrings>
+  <appSettings>
+    <add key="Kalvin" value="273.15"/>
+  </appSettings>
 </configuration>
